@@ -24,7 +24,6 @@ ask. <P>
   <li><A
       HREF="http://www.cs.wustl.edu/~schmidt/ACE-documentation.html">ACE online documentation</a>.
   <li><A
-      HREF="http://www.flyingdonkey.com/ace/">Translations for much of the ACE documentation</a>.
   <LI><A HREF="http://www.cs.wustl.edu/~schmidt/ACE/">Books on ACE</A>.
 </ul>
 
@@ -90,6 +89,7 @@ ask. <P>
   <li><a href="Symbol_Versioning.html">Symbol versioning</a> - How to do symbol versioning
       with ACE+TAO.
   <li><a href="CE-status.txt">CE-status.txt</a> - The status of ACE on Windows CE.
+  <li><a href="ACE-monotonic-timer.html">ACE-monotonic-timer.html</a> - How to use the ACE monotonic timer support.
   <li><a href="../ACEXML/docs/readme.txt">ACEXML</a> - A SAX2-based XML parser ACE uses and provides.
 </ul>
 
